# Statistics-based-on-PKDD-99-Financial-Data-Set

./: .dockerignore  .env  .gitignore  README.md  app.py  app_create_db.py  app_dash.py  compose.yaml  connection.py  create_db_app.py  creeate_db.py  docker-compose.app.yaml  docker-compose.yaml  dockerfile  dockerfile.init  entrypoint.sh  gunicorn.sh  init.sql  nginx.conf  pyproject.toml  requirements.txt  sql_queries.py  start.sh  zdjecie.py
PKDD/: __init__.py  config.py
PKDD/dash_page/: dash_charts.py  sql_queries.py
PKDD/financial_db/: create_db.py  data_mainpualtion.py  data_manipulation.py  financial_models.py  sql_queries.py  wrong_values.py
PKDD/main/: routes.py
PKDD/static/cleaned_csvs/: order.csv
PKDD/templates/: account.html  home.html  layout.html  login.html  register.html
PKDD/users/: forms.py  froms.py  routes.py  users_models.py  utils.py
containers_dir/: app.py  docker-compose.app.yaml  gunicorn.conf.py  gunicorn.sh
containers_dir/PKDD/: __init__.py
containers_dir/PKDD/dash_page/: sql_queries.py
containers_dir/PKDD/financial_db/: financial_models.py  wrong_values.py
containers_dir/PKDD/static/cleaned_csvs/: district.csv  loan.csv
containers_dir/PKDD/templates/: account.html  home.html  layout.html  register.html
containers_dir/PKDD/users/: routes.py  users_models.py
containers_dir/docker-init/: Dockerfile
docker-init/: Dockerfile
init-db/: create_databases.sh
test/: conftest.py  test_connection.py  test_create_db.py
test/__pycache__/: test_conn.cpython-313-pytest-8.3.4.pyc.1408  test_conn.cpython-313-pytest-8.3.4.pyc.17332  test_conn.cpython-313-pytest-8.3.4.pyc.17800  test_conn.cpython-313-pytest-8.3.4.pyc.18752  test_conn.cpython-313-pytest-8.3.4.pyc.19180  test_conn.cpython-313-pytest-8.3.4.pyc.20060  test_conn.cpython-313-pytest-8.3.4.pyc.23060  test_conn.cpython-313-pytest-8.3.4.pyc.23468  test_conn.cpython-313-pytest-8.3.4.pyc.23980  test_conn.cpython-313-pytest-8.3.4.pyc.24128  test_conn.cpython-313-pytest-8.3.4.pyc.24884  test_conn.cpython-313-pytest-8.3.4.pyc.25300  test_conn.cpython-313-pytest-8.3.4.pyc.25416  test_conn.cpython-313-pytest-8.3.4.pyc.5920  test_connection.cpython-313-pytest-8.3.4.pyc.13192
test_PKDD/: conftest.py
test_PKDD/__pycache__/: conftest.cpython-313-pytest-8.3.4.pyc.14820
test_PKDD/main/: test_download_route.py  test_home_route.py  test_routes.py
test_PKDD/main/__pycache__/: test_routes.cpython-313-pytest-8.3.4.pyc.27276
test_PKDD/users/: test_login_route.py  test_logout_route.py  test_register_route.py
test_PKDD/users/__pycache__/: test_login_route.cpython-313-pytest-8.3.4.pyc.16356  test_login_route.cpython-313-pytest-8.3.4.pyc.22700  test_login_route.cpython-313-pytest-8.3.4.pyc.22984  test_login_route.cpython-313-pytest-8.3.4.pyc.23284  test_login_route.cpython-313-pytest-8.3.4.pyc.26360  test_register_route.cpython-313-pytest-8.3.4.pyc.22880  test_register_route.cpython-313-pytest-8.3.4.pyc.23496  test_register_route.cpython-313-pytest-8.3.4.pyc.24668  test_register_route.cpython-313-pytest-8.3.4.pyc.24748  test_register_route.cpython-313-pytest-8.3.4.pyc.25352  test_register_route.cpython-313-pytest-8.3.4.pyc.27796  test_register_route.cpython-313-pytest-8.3.4.pyc.28028  test_register_route.cpython-313-pytest-8.3.4.pyc.28984  test_register_route.cpython-313-pytest-8.3.4.pyc.32264  test_register_route.cpython-313-pytest-8.3.4.pyc.608  test_register_route.cpython-313-pytest-8.3.4.pyc.6184
test_PKDD/users/routes/: test_account.py  test_delete_account.py  test_login.py  test_register.py  test_reset.py
test_PKDD/users/routes/__pycache__/: test_account.cpython-313-pytest-8.3.4.pyc.10316  test_account.cpython-313-pytest-8.3.4.pyc.15724  test_account.cpython-313-pytest-8.3.4.pyc.16092  test_account.cpython-313-pytest-8.3.4.pyc.21652  test_account.cpython-313-pytest-8.3.4.pyc.4420  test_account.cpython-313-pytest-8.3.4.pyc.6056  test_account.cpython-313-pytest-8.3.4.pyc.7160  test_account.cpython-313-pytest-8.3.4.pyc.7988  test_account.cpython-313-pytest-8.3.4.pyc.8936  test_delete_account.cpython-313-pytest-8.3.4.pyc.11344  test_delete_account.cpython-313-pytest-8.3.4.pyc.17148  (+9 more)
trash/: connection.py  lala.py
