[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statistics_based_on_pkdd_99_financial_data_set"
version = "0.1.0"
description = "A Python project for analyzing financial data based on the PKDD-99 dataset."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["financial", "PKDD-99", "statistics", "data-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "alembic==1.14.1",
    "asn1crypto==1.5.1",
    "Authlib==1.5.1",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "dash==2.18.2",
    "dash-bootstrap-components==1.7.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "dnspython==2.7.0",
    "email_validator==2.2.0",
    "Flask==3.0.3",
    "Flask-Bcrypt==1.0.1",
    "Flask-Login==0.6.3",
    "Flask-Mail==0.10.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "narwhals==1.25.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pg8000==1.31.2",
    "plotly==6.0.0",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "requests==2.32.3",
    "retrying==1.3.4",
    "scramp==1.4.5",
    "setuptools==75.8.0",
    "six==1.17.0",
    "SQLAlchemy==2.0.37",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "Werkzeug==3.0.6",
    "WTForms==3.2.1",
    "zipp==3.21.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0"
]

[tool.poetry]
name = "statistics_based_on_pkdd_99_financial_data_set"
version = "0.1.0"
description = "A Python project for analyzing financial data based on the PKDD-99 dataset."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

dependencies = [
    "python = ^3.10",
    "alembic = 1.14.1",
    "asn1crypto = 1.5.1",
    "Authlib = 1.5.1",
    "bcrypt = 4.3.0",
    "blinker = 1.9.0",
    "certifi = 2025.1.31",
    "cffi = 1.17.1",
    "charset-normalizer = 3.4.1",
    "click = 8.1.8",
    "colorama = 0.4.6",
    "cryptography = 44.0.2",
    "dash = 2.18.2",
    "dash-bootstrap-components = 1.7.1",
    "dash-core-components = 2.0.0",
    "dash-html-components = 2.0.0",
    "dash-table = 5.0.0",
    "dnspython = 2.7.0",
    "email_validator = 2.2.0",
    "Flask = 3.0.3",
    "Flask-Bcrypt = 1.0.1",
    "Flask-Login = 0.6.3",
    "Flask-Mail = 0.10.0",
    "Flask-SQLAlchemy = 3.1.1",
    "Flask-WTF = 1.2.2",
    "greenlet = 3.1.1",
    "gunicorn = 23.0.0",
    "idna = 3.10",
    "importlib_metadata = 8.6.1",
    "iniconfig = 2.0.0",
    "itsdangerous = 2.2.0",
    "Jinja2 = 3.1.5",
    "Mako = 1.3.9",
    "MarkupSafe = 3.0.2",
    "narwhals = 1.25.0",
    "nest-asyncio = 1.6.0",
    "numpy = 2.2.2",
    "packaging = 24.2",
    "pandas = 2.2.3",
    "pg8000 = 1.31.2",
    "plotly = 6.0.0",
    "pluggy = 1.5.0",
    "pycparser = 2.22",
    "pytest = 8.3.4",
    "pytest-mock = 3.14.0",
    "python-dateutil = 2.9.0.post0",
    "python-dotenv = 1.0.1",
    "pytz = 2025.1",
    "requests = 2.32.3",
    "retrying = 1.3.4",
    "scramp = 1.4.5",
    "setuptools = 75.8.0",
    "six = 1.17.0",
    "SQLAlchemy = 2.0.37",
    "typing_extensions = 4.12.2",
    "tzdata = 2025.1",
    "urllib3 = 2.3.0",
    "Werkzeug = 3.0.6",
    "WTForms = 3.2.1",
    "zipp = 3.21.0"
]
dev-dependencies = [
    "pytest = 8.3.4",
    "pytest-mock = 3.14.0"
]